<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:scaleType="fitXY"
        android:src="@drawable/diaog_popup" />

    <TextView
        android:id="@+id/highscore_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/heebo_regular"
        android:gravity="center"
        android:layout_marginTop="3dp"
        android:text="@string/new_highscore"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/name_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/highscore_tv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:hint="@string/enter_your_name"
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        android:textSize="25dp" />



    <LinearLayout
        android:id="@+id/coins_stats_highscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_et"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:src="@drawable/score" />

        <TextView
            android:id="@+id/coins_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center"
            android:text="@string/coins"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/go_btn"
        style="@style/button_style_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/coins_stats_highscore"
        android:layout_marginTop="50dp"
        android:text="@string/go"
        android:textSize="20sp"
        android:textStyle="bold" />
</RelativeLayout>