<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:scaleType="fitXY"
        android:src="@drawable/diaog_popup" />

    <TextView
        android:id="@+id/won_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/heebo_regular"
        android:gravity="center"
        android:text="@string/you_won"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/next_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/won_headline"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_lock_open_black_24dp"
            android:tint="@color/white" />


        <TextView
            android:id="@+id/level_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center"
            android:text="@string/next_level"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/coins_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/next_level"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/score" />

        <TextView
            android:id="@+id/coins_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center"
            android:text="@string/coins"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/go_btn"
        style="@style/button_style_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/coins_stats"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/go"
        android:textSize="20sp"
        android:textStyle="bold" />


</RelativeLayout>