<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:scaleType="fitXY"
        android:src="@drawable/diaog_popup" />

    <TextView
        android:id="@+id/tvGameName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"

        android:layout_centerHorizontal="true"
        android:fontFamily="@font/heebo_regular"
        android:gravity="center"
        android:text="@string/game_over"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/coins_stats_gameover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvGameName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/score" />

        <TextView
            android:id="@+id/coins_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center"
            android:text="@string/coins"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/back_btn"
        style="@style/button_style_green"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/coins_stats_gameover"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/heebo_regular"
        android:padding="10dp"
        android:layout_marginTop="75dp"
        android:text="@string/level_selection"
        android:textSize="20sp" />

</RelativeLayout>